Changes for 1.3.7
   Performance fixes for normal calculation (about 40% speed improvement)
   Added --enable-profile

Changes for 1.3.6
   Save/restore window size
   Include projection in frame all/selected command
   Open projection window from group and projection properties panels
   Allow multiple multiple bone joints for MS3D (subversions 1 and 2)
   Initial Cal3D support
   Better MD3_PATH handling
      Get MD3_PATH from shaders as well as model header
      Allow separate MD3_PATH for each shader
   Corrected capitalization for "Normals Face Out" command
   Split keyboard shortcut for flip front/back (backslash) view
      and flip ortho/persp (backtick)
   Added "Delete" button to animation model panel
   Redraw animation when loop is enabled/disabled (affects interpolation)
   Replaced lex/yacc code with custom preferences parser
      lex/yacc parser was having parse failures on some archs
   Allow MD2 texture coordinates to go outside of 0.0 to 1.0 range
   Report error if MD2 has more than one assigned material
   Remove trailing underscore on MD2 animation names
   Updated configuration for newer autoconf (2.61) and automake (1.9)
   Remember last skeletal/frame selection for new animation window
   Error message when attempting to paste animation frame of wrong type
   Fixed interpolation problem with translation keyframes on looped animations
   Fixed translation of animation name copy/split in animation sets window
   Other misc. translation fixes
   Added ../i18n to search path for translation files
   Treat unhandled backslashes in preferences as regular backslashes
   Changed error message on uknown file type to indicate it is probably
      a file extension problem
   Add ".mm3d" at save time if filename does not have an extension
   Use model vertex and point list sizes for writing frame animation data
      instead of using the size of the lists in the animation frames
   Added some sanity checking to MM3D loading code