@@ -1,6 +1,7 @@
 Changes for 1.3.7
    Performance fixes for normal calculation (about 40% speed improvement)
-   Added --enable-profile
+   Added --enable-profile to ./configure
+   Added --language to override the system locale
 
 Changes for 1.3.6
    Save/restore window size
